force-app/main/default/objects/custom_create343__c/custom_create343__c.object-meta.xml
<CustomObject>
    <label>Custom created object343</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects343</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>