force-app/main/default/objects/custom_create343__c/fields/custom_create_343field596__c.field-meta.xml
<CustomField>
    <fullName>custom_create_343field596__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 343field596</label>
    <type>Checkbox</type>
</CustomField>